[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = [ "rand" ] }
num-traits = "0.2"
polyexen = { path = "../polyexen" }
zkevm-circuits = { path = "../zkevm-circuits/zkevm-circuits", features = ["test"] }
bus-mapping = { path = "../zkevm-circuits/bus-mapping", features = ["test"] }
mock = { path = "../zkevm-circuits/mock" }
eth-types = { path = "../zkevm-circuits/eth-types" }
halo2_proofs = "0.2"
env_logger = "0.9"
rustyline = "11.0.0"
convert_case = "0.6.0"

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { path = "../halo2/halo2_proofs" }

[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
halo2wrong = { path = "../halo2wrong/halo2wrong" }

[patch.crates-io]
halo2_proofs = { path = "../halo2/halo2_proofs" }
