[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = [ "rand" ] }
num-traits = "0.2"
polyexen = { path = "../polyexen", default-features = false }
# zkevm-circuits = { path = "../zkevm-circuits/zkevm-circuits", features = ["test"] }
# bus-mapping = { path = "../zkevm-circuits/bus-mapping", features = ["test"] }
# mock = { path = "../zkevm-circuits/mock" }
# eth-types = { path = "../zkevm-circuits/eth-types" }
# zkevm-hashes = { path = "../halo2-lib/hashes/zkevm", default-features = false, features = ["halo2-pse"] }
# halo2_proofs = "0.2"
axiom-query = { path = "../axiom-eth-working/axiom-query", default-features = false }
axiom-core = { path = "../axiom-eth-working/axiom-core", default-features = false, features = ["revm"] }
axiom-client = { path = "../axiom-sdk-client/rust" }

log = "0.4.14"
env_logger = "0.9"
rustyline = "11.0.0"
convert_case = "0.6.0"

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
# halo2_proofs = { path = "../halo2/halo2_proofs" }
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", rev = "7a2165617195d8baa422ca7b2b364cef02380390" }
# halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", rev = "4350bceec26c94a53116feef20eba49fe5f819b5" }
# halo2_proofs = { git = "https://github.com/kilic/halo2.git", rev = "4350bceec26c94a53116feef20eba49fe5f819b5" }

[patch."https://github.com/axiom-crypto/halo2-lib.git"]
halo2-base = { path = "../halo2-lib/halo2-base" }
halo2-ecc = { path = "../halo2-lib/halo2-ecc" }
zkevm-hashes = { path = "../halo2-lib/hashes/zkevm" }

# [patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
# halo2wrong = { path = "../halo2wrong/halo2wrong" }

# [patch.crates-io]
# halo2_proofs = { path = "../halo2/halo2_proofs" }
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features = ["circuit-params"], rev = "d3746109d7d38be53afc8ddae8fdfaf1f02ad1d7" }
# [patch.crates-io]
# halo2-base = { path = "../halo2-lib/halo2-base" }
[patch."https://github.com/axiom-crypto/snark-verifier.git"]
# halo2_proofs = { path = "../halo2/halo2_proofs" }
snark-verifier = { path = "../snark-verifier/snark-verifier" }
snark-verifier-sdk = { path = "../snark-verifier/snark-verifier-sdk" }
[patch."https://github.com/axiom-crypto/halo2.git"]
# halo2_proofs = { path = "../halo2/halo2_proofs" }
halo2-axiom = { path = "../halo2-axiom/halo2_proofs" }
# halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", rev = "4350bceec26c94a53116feef20eba49fe5f819b5" }
# halo2_proofs = { git = "https://github.com/kilic/halo2.git", rev = "4350bceec26c94a53116feef20eba49fe5f819b5" }
[patch.crates-io]
halo2-axiom = { path = "../halo2-axiom/halo2_proofs" }

[features]
default = [ "halo2-axiom" ]
halo2-pse = ["polyexen/halo2-pse", "axiom-query/halo2-pse", "axiom-core/halo2-pse"]
halo2-axiom = ["polyexen/halo2-axiom", "axiom-query/halo2-axiom", "axiom-core/halo2-axiom"]

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
